# mutablecode

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  compile_mutablecode.sh
include/: Char.hpp  Compression.hpp  EntropyEvaluator.hpp  Evaluator.hpp  Interpreter.hpp  LevenshteinDistance.hpp  Mutator.hpp  Operation.hpp  Program.hpp  ProgramLoader.hpp  Random.hpp  StringEvaluator.hpp  Tape.hpp
src/: Char.cpp  Interpreter.cpp  Mutator.cpp  Program.cpp  main.cpp
